helmchart/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-ingress
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # مهم جداً لـ Nexus و SonarQube للسماح برفع الملفات الكبيرة
    nginx.ingress.kubernetes.io/proxy-body-size: "512m"
    # لضمان عمل المسارات الفرعية بشكل صحيح
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # التطبيق الأساسي
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-app-service
                port:
                  number: 80
          # أداة ArgoCD
          - path: /argocd
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
          # مخزن Nexus
          - path: /nexus
            pathType: Prefix
            backend:
              service:
                name: nexus-repository-manager
                port:
                  number: 8081
          # أداة SonarQube
          - path: /sonar
            pathType: Prefix
            backend:
              service:
                name: sonarqube-sonarqube
                port:
                  number: 9000
